2007-01-01  Renato Caldas  <seventhguardian@gmail.com>

	* libs/defaults.h (MAX_NUM_MODULES):
	* fvwm/module_interface.c (module_alloc):
	(do_execute_module):
	removed check for MAX_NUM_MODULES - not needed, done by the O.S.

	* fvwm/module_interface.c (do_execute_module):
	moved the allocation call to the end of the sanity checks and pipe
	creation - better for performance

2007-01-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	END MODULE STRUCT PATCHES

	* fvwm/module_interface.c (do_execute_module):
	fixed another memory leak

2007-01-01  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_interface.h:
	* fvwm/module_interface.c:
	* fvwm/modconf.c:
	renamed struct module member "pipeName" and "pipeAlias" to "name"
	and "alias"

	* fvwm/module_interface.c (do_execute_module):
	fixed possible memory leak

2007-01-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_interface.c (module_alloc):
	(do_execute_module):
	(KillModule):
	* fvwm/module_interface.h (fmodule):
	replaced int with a flag struct

	* fvwm/module_interface.h:
	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_interface.c (module_alloc):
	(module_free):
	(module_insert):
	(ClosePipes):
	add new modules at front of list again
	removed global variable init_fdset; use a flag in the module struct
	instead
	removed the now obsolete module slot count

2007-01-01  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_interface.c (module_remove):
	(KillModule):
	moved module remotion code to module_remove()

2007-01-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (My_XNextEvent):
	fixed startup commands

	* fvwm/module_interface.c (module_insert):
	(module_free):
	(KillModule):
	(ClosePipes):
	append modules at end of list

	* fvwm/events.c (My_XNextEvent):
	fixed core

	* fvwm/module_interface.c (ExecuteModuleCommand):
	(PositiveWrite):
	(KillModuleByName):
	(BroadcastPacket):
	(BroadcastNewPacket):
	(BroadcastName):